@@ -178,56 +178,4 @@ function modifyBoard($board_id, &$boardOptions)
 		</operation>
 	</file>
 
-	<file name="$sourcedir/Subs-Post.php">
-		<operation>
-			<search position="replace"><![CDATA[
-function createPost(&$msgOptions, &$topicOptions, &$posterOptions)
-{
-	global $db_prefix, $user_info, $txt, $modSettings, $smfFunc;
-]]></search>
-			<add><![CDATA[
-function createPost(&$msgOptions, &$topicOptions, &$posterOptions)
-{
-	global $db_prefix, $user_info, $txt, $modSettings, $smfFunc, $context, $sourcedir;
-]]></add>
-		</operation>
-
-		<operation>
-			<search position="replace"><![CDATA[
-		// There's been a new topic AND a new post today.
-]]></search>
-			<add><![CDATA[
-		//	Generate the pretty URL of our exciting new topic
-		require_once($sourcedir . '/Subs-PrettyUrls.php');
-		$pretty_text = substr(pretty_generate_url($msgOptions['subject']), 0, 80);
-
-		//	Is the URL already there?
-		$smfFunc['db_query']('', "
-			SELECT ID_TOPIC
-			FROM {$db_prefix}pretty_topic_urls
-			WHERE pretty_url = '$pretty_text'
-			LIMIT 1", __FILE__, __LINE__);
-		//	If it's not unique we need to change it
-		//	2.0 replacement function?
-		$notunique = mysql_num_rows($query);
-		$smfFunc['db_free_result']($query);
-
-		//	Can't be empty, can't be a number and can't be the same as another
-		if ($pretty_text == '' || is_numeric($pretty_text) || $notunique != 0)
-			//	Add suffix '-tID_TOPIC' to the pretty url
-			$pretty_text = substr($pretty_text, 0, 70) . ($pretty_text != '' ? '-t' : 't') . $topicOptions['id'];
-
-		//	Update the database
-		$smfFunc['db_query']('', "
-			REPLACE INTO {$db_prefix}pretty_topic_urls (ID_TOPIC, pretty_url) 
-			VALUES (" . $topicOptions['id'] . ', "' . $pretty_text . '")', __FILE__, __LINE__);
-
-		//	Count those queries!
-		$context['pretty']['db_count'] = $context['pretty']['db_count'] + 2;
-
-		// There's been a new topic AND a new post today.
-]]></add>
-		</operation>
-	</file>
-
 </modification>
